--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#E8181D</color>
+    <color name="colorPrimaryDark">#D00B10</color>
+    <color name="colorAccent">#FDFCFC</color>
+
+    //
+    <color name="color_text_light">#a9a8a6</color>
+    <color name="color_text_dark">#434242</color>
 </resources>
