--- a/app/src/main/res/layout/fragment_create_cake.xml
+++ b/app/src/main/res/layout/fragment_create_cake.xml
@@ -1,25 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.fstyle.cakezy.viewmodel.CakeViewModel" />
+            type="com.fstyle.cakezy.viewmodel.CakeViewModel"
+            />
+        <import type="android.view.View"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/layout_constraint"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/background"
+        >
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.textSample}"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
+            android:layout_marginBottom="@dimen/dp_10"
+            android:gravity="center"
+            android:padding="@dimen/dp_3"
+            android:text="@string/choose_the_type_of_cake"
+            android:textSize="@dimen/sp_22"
+            app:layout_constraintBottom_toTopOf="@+id/card_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp_3"
+                android:padding="@dimen/dp_5"
+                >
+                <TextView
+                    android:id="@+id/text_cake_one_floor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cake_one_floor"
+                    android:textColor="@color/color_text_dark"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycle_view_cake_one_floor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_5"
+                    android:orientation="horizontal"
+                    app:layoutManager="LinearLayoutManager"
+                    app:layout_constraintTop_toBottomOf="@+id/text_cake_one_floor"
+                    />
+                <View
+                    android:id="@+id/view_one"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_1"
+                    android:layout_marginBottom="@dimen/dp_10"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:background="@color/colorPrimaryDark"
+                    app:layout_constraintTop_toBottomOf="@+id/recycle_view_cake_one_floor"
+                    />
+                <TextView
+                    android:id="@+id/text_cake_two_floor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:text="@string/cake_two_floor"
+                    android:textColor="@color/color_text_dark"
+                    app:layout_constraintTop_toBottomOf="@+id/view_one"
+                    />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycle_view_cake_two_floor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="LinearLayoutManager"
+                    app:layout_constraintTop_toBottomOf="@+id/text_cake_two_floor"
+                    />
+                <View
+                    android:id="@+id/view_two"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_1"
+                    android:layout_marginBottom="@dimen/dp_10"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:background="@color/colorPrimaryDark"
+                    app:layout_constraintTop_toBottomOf="@+id/recycle_view_cake_two_floor"
+                    />
+
+            </android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.CardView>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dp_24"
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginRight="@dimen/dp_24"
+            android:layout_marginStart="@dimen/dp_24"
+            android:layout_marginTop="@dimen/dp_24"
+            android:background="@drawable/button_red"
+            android:text="@string/next"
+            android:textColor="@android:color/white"
+            app:layout_constraintTop_toBottomOf="@+id/card_view"
+            />
     </android.support.constraint.ConstraintLayout>
 </layout>
