--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     //
     <color name="color_text_light">#a9a8a6</color>
     <color name="color_text_dark">#434242</color>
+    <color name="color_red_white_light">#FFEBEE</color>
+    <color name="color_red_dark">#B71C1C</color>
 </resources>
