--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,9 @@
     <dimen name="sp_22">22sp</dimen>
     <dimen name="sp_16">16sp</dimen>
     <dimen name="dp_24">24dp</dimen>
+    <dimen name="dp_250">250dp</dimen>
+    <dimen name="dp_3">3dp</dimen>
+    <dimen name="dp_5">5dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_10">10dp</dimen>
 </resources>
