--- a/app/src/main/res/layout/fragment_create_cake.xml
+++ b/app/src/main/res/layout/fragment_create_cake.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
@@ -24,7 +25,7 @@
             android:layout_marginBottom="@dimen/dp_10"
             android:gravity="center"
             android:padding="@dimen/dp_3"
-            android:text="@string/choose_the_type_of_cake"
+            android:text="@string/choose_style_cake"
             android:textSize="@dimen/sp_22"
             app:layout_constraintBottom_toTopOf="@+id/card_view"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -46,60 +47,72 @@
                 android:layout_margin="@dimen/dp_3"
                 android:padding="@dimen/dp_5"
                 >
-                <TextView
-                    android:id="@+id/text_cake_one_floor"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/cake_one_floor"
-                    android:textColor="@color/color_text_dark"
+                    android:background="@drawable/border_image_cake"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/cake_design_1"
+                    tools:ignore="ContentDescription"
                     />
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycle_view_cake_one_floor"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_5"
-                    android:orientation="horizontal"
-                    app:layoutManager="LinearLayoutManager"
-                    app:layout_constraintTop_toBottomOf="@+id/text_cake_one_floor"
-                    />
-                <View
-                    android:id="@+id/view_one"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_1"
-                    android:layout_marginBottom="@dimen/dp_10"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:background="@color/colorPrimaryDark"
-                    app:layout_constraintTop_toBottomOf="@+id/recycle_view_cake_one_floor"
-                    />
-                <TextView
-                    android:id="@+id/text_cake_two_floor"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:text="@string/cake_two_floor"
-                    android:textColor="@color/color_text_dark"
-                    app:layout_constraintTop_toBottomOf="@+id/view_one"
-                    />
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycle_view_cake_two_floor"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layoutManager="LinearLayoutManager"
-                    app:layout_constraintTop_toBottomOf="@+id/text_cake_two_floor"
-                    />
-                <View
-                    android:id="@+id/view_two"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_1"
-                    android:layout_marginBottom="@dimen/dp_10"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:background="@color/colorPrimaryDark"
-                    app:layout_constraintTop_toBottomOf="@+id/recycle_view_cake_two_floor"
-                    />
+                <!--Todo edit later when have data-->
+                <!--<TextView-->
+                <!--android:id="@+id/text_cake_one_floor"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/cake_one_floor"-->
+                <!--android:textColor="@color/color_text_dark"-->
+                <!--app:layout_constraintLeft_toLeftOf="parent"-->
+                <!--app:layout_constraintRight_toRightOf="parent"-->
+                <!--app:layout_constraintTop_toTopOf="parent"-->
+                <!--/>-->
+                <!--<android.support.v7.widget.RecyclerView-->
+                <!--android:id="@+id/recycle_view_cake_one_floor"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="@dimen/dp_5"-->
+                <!--android:orientation="horizontal"-->
+                <!--app:layoutManager="LinearLayoutManager"-->
+                <!--app:layout_constraintTop_toBottomOf="@+id/text_cake_one_floor"-->
+                <!--/>-->
+                <!--<View-->
+                <!--android:id="@+id/view_one"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="@dimen/dp_1"-->
+                <!--android:layout_marginBottom="@dimen/dp_10"-->
+                <!--android:layout_marginTop="@dimen/dp_10"-->
+                <!--android:background="@color/colorPrimaryDark"-->
+                <!--app:layout_constraintTop_toBottomOf="@+id/recycle_view_cake_one_floor"-->
+                <!--/>-->
+                <!--<TextView-->
+                <!--android:id="@+id/text_cake_two_floor"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="@dimen/dp_10"-->
+                <!--android:text="@string/cake_two_floor"-->
+                <!--android:textColor="@color/color_text_dark"-->
+                <!--app:layout_constraintTop_toBottomOf="@+id/view_one"-->
+                <!--/>-->
+                <!--<android.support.v7.widget.RecyclerView-->
+                <!--android:id="@+id/recycle_view_cake_two_floor"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="horizontal"-->
+                <!--app:layoutManager="LinearLayoutManager"-->
+                <!--app:layout_constraintTop_toBottomOf="@+id/text_cake_two_floor"-->
+                <!--/>-->
+                <!--<View-->
+                <!--android:id="@+id/view_two"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="@dimen/dp_1"-->
+                <!--android:layout_marginBottom="@dimen/dp_10"-->
+                <!--android:layout_marginTop="@dimen/dp_10"-->
+                <!--android:background="@color/colorPrimaryDark"-->
+                <!--app:layout_constraintTop_toBottomOf="@+id/recycle_view_cake_two_floor"-->
+                <!--/>-->
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
@@ -112,6 +125,7 @@
             android:layout_marginStart="@dimen/dp_24"
             android:layout_marginTop="@dimen/dp_24"
             android:background="@drawable/button_red"
+            android:onClick="@{() -> viewModel.onClickNext()}"
             android:text="@string/next"
             android:textColor="@android:color/white"
             app:layout_constraintTop_toBottomOf="@+id/card_view"
