--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="color_text_dark">#434242</color>
     <color name="color_red_white_light">#FFEBEE</color>
     <color name="color_red_dark">#B71C1C</color>
+    <color name="color_white_translate">#59FFFFFF</color>
 </resources>
