--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_1">1dp</dimen>
     <dimen name="dp_10">10dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
 </resources>
