[Sprint 1] Add Cream Decoration in Cake

--- a/app/src/main/res/layout/activity_choose_style_cake.xml
+++ b/app/src/main/res/layout/activity_choose_style_cake.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.fstyle.cakezy.screen.choosestylecake.ChooseStyleCakeViewModel"
+            type="com.fstyle.cakezy.screen.choosestylecake.ChooseStyleCakeContract.ViewModel"
             />
         <import type="android.view.View"/>
     </data>
@@ -125,7 +125,7 @@
             android:layout_marginStart="@dimen/dp_24"
             android:layout_marginTop="@dimen/dp_24"
             android:background="@drawable/button_red"
-            android:onClick="@{() -> viewModel.onClickNext()}"
+            android:onClick="@{() -> viewModel.onNextButtonClick()}"
             android:text="@string/next"
             android:textColor="@android:color/white"
             app:layout_constraintTop_toBottomOf="@+id/card_view"
