--- a/app/src/main/res/layout/activity_decorations_cake.xml
+++ b/app/src/main/res/layout/activity_decorations_cake.xml
@@ -7,8 +7,9 @@
     <data>
         <variable
             name="viewModel"
-            type="com.fstyle.cakezy.screen.decorationscake.DecorationsCakeViewModel"
+            type="com.fstyle.cakezy.screen.decorationscake.DecorationsCakeContract.ViewModel"
             />
+        <import type="android.view.View"/>
     </data>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,8 +25,44 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            setCandleCake="@{viewModel.candleCake}"
+            setCreamCake="@{viewModel.creamCake}"
             tools:ignore="ContentDescription"
             />
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_24"
+            android:padding="@dimen/dp_2"
+            app:layout_constraintTop_toBottomOf="@+id/image_cake"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerview_cream"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dp_2"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/dp_2"
+                    app:layoutManager="LinearLayoutManager"
+                    app:recyclerAdapter="@{viewModel.creamAdapter}"
+                    />
 
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerview_candle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dp_2"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/dp_2"
+                    app:layoutManager="LinearLayoutManager"
+                    app:recyclerAdapter="@{viewModel.candleAdapter}"
+                    />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
     </android.support.constraint.ConstraintLayout>
 </layout>
