--- a/app/src/main/res/layout/activity_choose_style_cake.xml
+++ b/app/src/main/res/layout/activity_choose_style_cake.xml
@@ -119,16 +119,16 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_24"
-            android:layout_marginRight="@dimen/dp_24"
-            android:layout_marginStart="@dimen/dp_24"
-            android:layout_marginTop="@dimen/dp_24"
+            android:layout_marginBottom="@dimen/dp_5"
+            android:layout_marginEnd="@dimen/dp_3"
+            android:layout_marginLeft="@dimen/dp_3"
+            android:layout_marginRight="@dimen/dp_3"
+            android:layout_marginStart="@dimen/dp_3"
             android:background="@drawable/button_red"
             android:onClick="@{() -> viewModel.onNextButtonClick()}"
             android:text="@string/next"
             android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@+id/card_view"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
     </android.support.constraint.ConstraintLayout>
 </layout>
