--- a/app/src/main/res/layout/activity_face_cake.xml
+++ b/app/src/main/res/layout/activity_face_cake.xml
@@ -7,16 +7,17 @@
     <data>
         <variable
             name="viewModel"
-            type="com.fstyle.cakezy.screen.decorationscake.DecorationsCakeContract.ViewModel"
+            type="com.fstyle.cakezy.screen.facecake.FaceCakeContract.ViewModel"
             />
-        <import type="android.view.View"/>
     </data>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:context="com.fstyle.cakezy.screen.facecake.FaceCakeActivity"
         >
-        <com.fstyle.cakezy.widget.DesignBodyCakeView
-            android:id="@+id/image_cake"
+
+        <com.fstyle.cakezy.widget.DesignFaceCakeView
+            android:id="@+id/image_face_cake"
             android:layout_width="@dimen/dp_250"
             android:layout_height="@dimen/dp_250"
             android:adjustViewBounds="true"
@@ -25,45 +26,33 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            setCandleCake="@{viewModel.candleCake}"
-            setCreamCake="@{viewModel.creamCake}"
+            setColorCake="@{viewModel.colorCake}"
             tools:ignore="ContentDescription"
             />
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dp_2"
+            android:layout_marginLeft="@dimen/dp_2"
+            android:layout_marginRight="@dimen/dp_2"
+            android:layout_marginStart="@dimen/dp_2"
             android:layout_marginTop="@dimen/dp_24"
-            android:padding="@dimen/dp_2"
-            app:layout_constraintTop_toBottomOf="@+id/image_cake"
+            android:padding="@dimen/dp_3"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_face_cake"
             >
-            <LinearLayout
-                android:id="@+id/layout_item_decoration"
+
+            <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerview_cream"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/dp_2"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/dp_2"
-                    app:layoutManager="LinearLayoutManager"
-                    app:recyclerAdapter="@{viewModel.creamAdapter}"
-                    />
+                android:layout_margin="@dimen/dp_2"
+                android:orientation="horizontal"
+                android:padding="@dimen/dp_3"
+                app:layoutManager="LinearLayoutManager"
+                app:recyclerAdapter="@{viewModel.colorAdapter}"
+                />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerview_candle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/dp_2"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/dp_2"
-                    app:layoutManager="LinearLayoutManager"
-                    app:recyclerAdapter="@{viewModel.candleAdapter}"
-                    />
-            </LinearLayout>
         </android.support.v7.widget.CardView>
         <Button
             android:layout_width="match_parent"
