--- a/app/src/main/res/layout/activity_face_cake.xml
+++ b/app/src/main/res/layout/activity_face_cake.xml
@@ -13,7 +13,6 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.fstyle.cakezy.screen.facecake.FaceCakeActivity"
         >
 
         <com.fstyle.cakezy.widget.DesignFaceCakeView
@@ -27,9 +26,11 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             setColorCake="@{viewModel.colorCake}"
+            setDecorationsCake="@{viewModel.decorationsCake}"
             tools:ignore="ContentDescription"
             />
         <android.support.v7.widget.CardView
+            android:id="@+id/layout_color_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dp_2"
@@ -42,7 +43,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image_face_cake"
             >
-
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,7 +52,30 @@
                 app:layoutManager="LinearLayoutManager"
                 app:recyclerAdapter="@{viewModel.colorAdapter}"
                 />
+        </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dp_2"
+            android:layout_marginLeft="@dimen/dp_2"
+            android:layout_marginRight="@dimen/dp_2"
+            android:layout_marginStart="@dimen/dp_2"
+            android:layout_marginTop="@dimen/dp_10"
+            android:padding="@dimen/dp_3"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout_color_list"
+            >
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp_2"
+                android:orientation="horizontal"
+                android:padding="@dimen/dp_3"
+                app:layoutManager="LinearLayoutManager"
+                app:recyclerAdapter="@{viewModel.decorationsAdapter}"
+                />
         </android.support.v7.widget.CardView>
         <Button
             android:layout_width="match_parent"
